# 06_2

./: catalog_data.json  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: refill_blogrecord.py  refill_category.py  refill_product.py  refill_version.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_product_creator.py  0003_alter_product_category.py  0003_blogrecord_author.py  0004_alter_product_image.py  0004_product_is_active.py  0005_blogrecord.py  0006_alter_blogrecord_preview_alter_product_image.py  0007_alter_product_image.py  0008_alter_product_category_alter_product_price_version.py  0009_alter_version_number.py
catalog/templates/catalog/: base.html  blogrecord_confirm_delete.html  blogrecord_detail.html  blogrecord_form.html  blogrecord_list.html  category_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_detail.html
catalog/templates/catalog/includes/: inc_blogrecord_form.html  inc_catalog_menu.html  inc_product_form.html
catalog/templatetags/: mediapath.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html
